# mcp_S3_server

./: .bumpversion.cfg  .gitignore  CONFIGURATION.md  README.md  main.py  pyproject.toml
.github/workflows/: publish-simple.yml  publish.yml  version-bump.yml
src/mcp_s3_server/: __init__.py  server_main.py
src/mcp_s3_server/tools/: download_file_tool.py  list_buckets_tool.py  list_object_tool.py
src/mcp_s3_server/utils/: __init__.py  utils.py
tests/: __init__.py  test_main.py
