[project]
name = "mcp-s3-server"
version = "0.1.0"
description = "An implementation of a Model Context Protocol (MCP) server for AWS S3, enabling AI models, particularly Large Language Models (LLMs), to securely interact with S3 buckets. The server offers a standardized interface to list S3 buckets, list objects within buckets, and download file contents. It facilitates seamless integration between AI applications and AWS S3 storage for efficient data retrieval and management."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
